--- a/wwd130/wwr/styles/site-plan-rafting.css
+++ b/wwd130/wwr/styles/site-plan-rafting.css
@@ -13,8 +13,8 @@ Fonts are separated by a & */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Georgia; Minion;
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Prata", serif;
+  --paragraph-font: "Lato", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #5c6274;  /* headlines on a white background */ 
