--- a/wwd130/wwr/styles/site-plan-rafting.css
+++ b/wwd130/wwr/styles/site-plan-rafting.css
@@ -25,7 +25,7 @@ Fonts are separated by a & */
   --nav-link-color: white;
   --nav-background-color: #5c6274;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #6c7c4f;
+  --nav-hover-background-color: black;
 }
 
 
