--- a/Weekly Examples/styles/styles.css
+++ b/Weekly Examples/styles/styles.css
@@ -1,45 +1,28 @@
-#background{
-    background-color: pink;
-    max-width: 150px;
-}
-
-h1{
-    font-family: 'Impact';
+footer {
+    background-color: steelblue;
     color: white;
-    font-size: 24px;
-    text-align: center;
 }
-
-#one{
-    font-family: 'Impact';
+footer p {
+    padding: 25px;
+}
+h1 {
+    margin: 50px 0;
+}
+nav {
+    background-color: steelblue;
+}
+a {
     color: white;
-    font-size: 11;
-    text-align: center;
 }
-
-#two{
-    font-family: 'Impact';
-    color: black;
-    font-size: 13;
-    text-align: center;
+nav {
+    padding: 25px;
 }
-
+a {
+    padding: 25px;
+}
+body {
+    margin: 0
+}
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-}
-
-#three{
-    font-family: 'Impact';
-    color: white;
-    font-size: 24;
-    text-align: center
-}
-#four{
-    font-family: 'Impact';
-    color: black;
-    font-size: 11;
-    text-align: center;
+    border: 4px solid steelblue;
 }
