--- a/wwd130/wwr/styles/style.css
+++ b/wwd130/wwr/styles/style.css
@@ -1,52 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&family=Merriweather:wght@700&family=Prata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&family=Merriweather:wght@700&family=Prata&display=swap');
 
-#logo_link {
-    padding-top: 5px;
-}
-
-.home-title {
-    font-family: 'Merriweather', serif, 'Lato', sans-serif;
-    font-size: 2em;
-    margin-top: 10px;
-}
-
-.icon {
-    width: 80px;
-    padding-top: 10px;
-}
-
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-}
-
-nav a {
-    text-align: center;
-        color: white;
-    text-decoration: none;
-    padding: 35px;
-}
-
-#hero-msg h1 {
-    text-align: center;
-}
-
-#hero-msg h4 {
-    text-align: center;
-}
-.button-box {
-    text-align: center;
-}
-main section {
-    text-align: center;
-    box-sizing: border-box;
-}
-#background {
-    height: 725px;
-    background-color:#6f6b54;
-    
-}
 body {
     background-color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -55,30 +9,304 @@ body {
     margin: 0;
 }
 
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
 header {
     background-color: #5c6274;
-    font-size: 1.5em;
-    padding: 5px 20px;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+.logo {
+    width: 150px;
+}
+
+nav {
+
+    display: flex;
+    justify-content: space-around;
+    color: white;
+}
+
+nav a {
+    text-align: center;
+    background-color: #5c6274;
+    text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover {
     background-color: #6c7c4f;
+    color: white;
+    text-decoration: underline;      
+
+}
+
+#hero {
+
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-img {
+
+    width: 100%;
+    opacity: .6;
+}
+
+#hero-msg {
+
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-msg h1 {
+
+    text-align: center;
+}
+
+#hero-msg h4 {
+
+    text-align: center;
+    color: black;
+    
+}
+
+.home-title {
+    color: black;
+    font-family: 'Merriweather', serif, 'Lato', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+.button-box {
+    text-align: center;
 }
 
 .book {
-    background-color: #6c7c4f;
-    text-align: center;
+    background-color: #294F5B;
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
 } 
 
-.join {
-    background-color: #5c6274;
+.book:hover {
+    background-color:white;
+    color:#6c7c4f;
+    text-decoration: underline;
+}
+
+#background {
+    height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+    
+}
+
+main section {
     text-align: center;
+    
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+h2 {        
+    color: #294F5B;
+    margin: 0;
+}
+
+h4 {
+    color:white;
+    font-weight: bold;
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+.tours-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+
+}
+
+.lessons-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains {
+    margin: 100px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6c7c4f;
+
+}
+
+.card-img {
+
+    border: 10px solid white;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6c7c4f;
+}
+
+.card-img:hover{
+    opacity:6;
+    transform: scale(1.1);
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+.tours-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.tours-img {
+    border: 10px solid #5c6274;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #5c6274;
+}
+
+.tours-img:hover {
+    opacity:6;
+    transform: scale(1.1);
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.camping-img {
+    border: 10px solid #5c6274;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #5c6274;
+}
+.camping-img:hover {
+    opacity:6;
+    transform: scale(1.1);
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+.lessons-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.lessons-img {
+    border: 10px solid #5c6274;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #5c6274;
+}
+.lessons-img:hover {
+    opacity:6;
+    transform: scale(1.1);
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+
+#background {
+    height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+    background-color: #5c6274;
+
+}
+
+.mountains {
+    margin: 100px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #5c6274;
+}
+
+
+.msg {
+    background-color: white;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #5c6274;
+
+}
+
+.msg h2 {
+    color: #6c7c4f;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+.msg p {
+    color: #6c7c4f;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+
+.join{
+    background-color: #294F5B;
     color: white;
     text-decoration: none;
     font-size: 18px;
@@ -87,79 +315,62 @@ nav a:hover {
     border-radius: 5px;
 }
 
-.book:hover, .join:hover {
-    background-color: black;
-}
-
-.tours-img {
-    border: 10px solid #5c6274;
-}
-
-
-.tours-card {
-    margin: 200px 0;
-}
-
-.camping-img {
-    border: 10px solid #5c6274;
-}
-.camping-card {
-    margin: 200px 0;
-}
-
-.lessons-img {
-    border: 10px solid #5c6274;
-}
-
-.lessons-card {
-    margin: 200px 0;
-}
-
-h2 {        
-    background-color: white;
-    font-family: 'Merriweather', serif, 'Lato', sans-serif;
-}
-
-.msg {
-    background-color: #6c7c4f;
-    line-height: 1.5em;
-    padding: 35px;
-}
-
-.msg p {
-    font-size: .8em;
-    padding-bottom: 15px;
-    background-color: #6c7c4f;
-}
-
-.mountains {
-    margin-top: 75px;
-    margin-bottom: 150px;
-}
-
-footer {
+.join:hover{
     background-color: #5c6274;
-    padding: 25px 50px;
-    margin-top: 200px;
-}
-footer a {
-    text-align: center;
     color: white;
-    text-decoration: none
-}
-footer a:hover {
-    background-color: #6c7c4f;
-}
-
-footer p {
-    font-size: 1.8em;
-}
-
-footer p a:hover {
     text-decoration: underline;
 }
 
-footer .social img {
-    padding-top: 15px;
+footer{
+    background-color: #5c6274;
+    color: white;
+    text-decoration: none;
+    font-family: 'Merriweather', serif, 'Lato', sans-serif;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
