--- a/wwd130/eoe/styles/site-plan.css
+++ b/wwd130/eoe/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #0A0F0D ;
+  --secondary-color: #2a1e5c ;
+  --accent1-color: #EE4266;
+  --accent2-color: #3cbbb1;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #2a1e5c;  /* headlines on a white background */ 
+  --headline-color-on-color:#C4CBCA ; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #2a1e5c; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #C4CBCA; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #2a1e5c;
+  --nav-link-color: #C4CBCA;
+  --nav-background-color: #2a1e5c ;
+  --nav-hover-link-color: #EE4266;
+  --nav-hover-background-color: #3cbbb1;
 }
 
 
