--- a/wwd130/eoe/styles/site-plan.css
+++ b/wwd130/eoe/styles/site-plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #3cbbb1;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Yrsa", Verdana, helvetica, sans-serif;
+  --paragraph-font: "Short stack","Courier New", "Garmond", serif ;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2a1e5c;  /* headlines on a white background */ 
