--- a/wwd130/eoe/styles/site-plan.css
+++ b/wwd130/eoe/styles/site-plan.css
@@ -7,8 +7,8 @@ Fonts are separated by a | */
   /* change the values below to your colors from your palette */
   --primary-color: #2a1e5c ;
   --secondary-color: #EE4266 ;
-  --accent1-color: #3cbbb1;
-  --accent2-color: #C4CBCA;
+  --accent1-color: #C4CBCA;
+  --accent2-color: #89D1D9;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Yrsa", Verdana, helvetica, sans-serif;
@@ -16,14 +16,14 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2a1e5c;  /* headlines on a white background */ 
-  --headline-color-on-color:#C4CBCA ; /* headlines on a colored background */ 
+  --headline-color-on-color:#C4CBCA; /* headlines on a colored background */ 
   --paragraph-color-on-white: #2a1e5c; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #C4CBCA; /* paragraph text on a colored background */ 
   --paragraph-background-color: #2a1e5c;
   --nav-link-color: #C4CBCA;
   --nav-background-color: #2a1e5c ;
-  --nav-hover-link-color: #EE4266;
-  --nav-hover-background-color: #3cbbb1;
+  --nav-hover-link-color: black;
+  --nav-hover-background-color: #EE4266;
 }
 
 
