--- a/wwd130/wwr/styles/style.css
+++ b/wwd130/wwr/styles/style.css
@@ -32,7 +32,6 @@ header {
 }
 
 nav {
-
     display: flex;
     justify-content: space-around;
     color: white;
@@ -51,46 +50,38 @@ nav a:hover {
     background-color: #6c7c4f;
     color: white;
     text-decoration: none;      
-
 }
 
 #hero {
-
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
 
 #hero-box {
-
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
 
 #hero-img {
-
     width: 100%;
     opacity: .6;
 }
 
 #hero-msg {
-
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
 }
 
 #hero-msg h1 {
-
     text-align: center;
 }
 
 #hero-msg h4 {
-
     text-align: center;
     color: black;
-    
 }
 
 .home-title {
@@ -100,6 +91,7 @@ nav a:hover {
     margin-top: 10px;
     text-decoration: none;
 }
+
 .button-box {
     text-align: center;
 }
@@ -125,18 +117,15 @@ nav a:hover {
     height: 725px;
     grid-column: 1/11;
     grid-row: 4/9;
-    
 }
 
 main section {
-    text-align: center;
-    
+    text-align: center;   
 }
 
 .home-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-
 }
 
 main section img {
@@ -169,7 +158,6 @@ h4 {
     margin: 200px 0;
     grid-column: 5/7;
     grid-row: 2/3;
-
 }
 
 .lessons-card {
@@ -184,11 +172,9 @@ h4 {
     grid-column: 2/7;
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6c7c4f;
-
 }
 
 .card-img {
-
     border: 10px solid white;
     width: 100%;
     transition: transform .5s;
@@ -261,6 +247,7 @@ main section img {
     transition: transform .5s;
     box-shadow: 5px 5px 10px #5c6274;
 }
+
 .lessons-img:hover {
     opacity:6;
     transform: scale(1.1);
@@ -271,13 +258,11 @@ main section img {
     padding-top: 10px;
 }
 
-
 #background {
     height: 725px;
     grid-column: 1/11;
     grid-row: 4/9;
     background-color: #5c6274;
-
 }
 
 .mountains {
@@ -288,7 +273,6 @@ main section img {
     box-shadow: 5px 5px 10px #5c6274;
 }
 
-
 .msg {
     background-color: white;
     line-height: 1.5em;
@@ -296,7 +280,6 @@ main section img {
     grid-column: 6/10;
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #5c6274;
-
 }
 
 .msg h2 {
@@ -330,19 +313,17 @@ footer {
     color: white;
     font-family: 'Merriweather', serif, 'Lato', sans-serif;
     padding: 25px 50px;
-    margin-top: 200px;
+    margin-top: 100px;
     text-decoration: none;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    
+    align-items: center;    
 }
 
-footer a {
-    
+footer a {   
     color: white;
-    text-decoration: none;
-  }
+    text-decoration: none; 
+}
 
 
 
@@ -351,20 +332,17 @@ footer a {
 
 
 #hero_package {
-
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     margin-top: -100px;
 }
 
 #hero_package_box {
-
     grid-column: 1/4;
     grid-row: 1/2;
     z-index: -1;
 }
 #hero_package_img {
-
     width: 100%;
 }
 
@@ -392,8 +370,8 @@ footer a {
     grid-row: 2/3;
     margin-top: 50px;  
 }
-.package_title {
-    
+
+.package_title {  
     color: black;
     text-align: center;
     text-decoration: none;
@@ -403,8 +381,7 @@ footer a {
     border-radius: 10px; 
 }
 
-.package_paragraph {
-    
+.package_paragraph {   
     background-color: #5c6274;
     color: white;
     text-decoration: none;
@@ -415,13 +392,45 @@ footer a {
 }
 
 .package_grid {
-    grid-column: 1/4;
+    grid-column: 1/2;
     grid-row: 4/4;
+    margin-top: 50px;
 }
 
 .book_package:hover {
     background-color: #5c6274;
     color: white;
+}
+
+.button-box1 {
+    text-align: center;
+    margin-top: 50px;
+}
+.book1 {
+    background-color: #294F5B;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px 30px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+.book1:hover {
+    background-color:white;
+    color:#6c7c4f;
+    text-decoration: none;
+}
+.join_package {
+    display: flex;
+    background-color: #294F5B;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px 30px;
+    margin-top: 100px;
+    border-radius: 5px;
 }
 
 .join_packages:hover {
@@ -451,74 +460,19 @@ footer a {
     grid-row: 4/4;
     padding:  50px;
 }
-.column {
-    float: left;
+.column {    
     width: 50%;
-    padding: 5px;
+    display: grid;
+    place-items: center;   
 }
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-    
-/*#hero_package, .package_grid {
-    display: block;
-    height: auto;
-    
-}
-Main class on needs to be worked.
-working from "main class, section class, dev id, img
-fixing book now box in middle
-have not done "rafting pictures, 
-*/
 
-
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-        
-    }
-    nav, footer {
-        flex-direction: column;
-        text-decoration: none;
-        
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-        text-decoration: none;
-        
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-        text-decoration: none;
-  
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 0 4px;
 }
+
+.column img {
+    margin-top: 8px;
 }
+
