--- a/wwd130/eoe/styles/style.css
+++ b/wwd130/eoe/styles/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Short+Stack&display=swap');
 body {
     background-color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:"Short Stack";
     font-size: 22px;
     padding: 0;
     margin: 0;
@@ -79,7 +79,7 @@ nav a:hover {
 
 .home-title {
     color: BLACK;
-    font-family: 'Merriweather', serif, 'Lato', sans-serif;
+    font-family: "Yrsa";
     font-size: 3em;
     margin-top: 10px;
     text-decoration: none;
@@ -112,7 +112,7 @@ nav a:hover {
 }
 .home-title_f {
     color: #EE4266;
-    font-family: 'Merriweather', serif, 'Lato', sans-serif;
+    font-family: "Yrsa";
     font-size: 3em;
     margin-top: 10px;
     text-decoration: none;
@@ -154,10 +154,7 @@ nav a:hover {
     display: block;
     text-align: center;
     margin: auto;
-    
-}
 
-#purple {
     
 }
 
@@ -166,7 +163,6 @@ footer {
     width: 100%;
     background-color: #EE4266 ;
     color: #2A1E5C;
-    font-family: 'Merriweather', serif, 'Lato', sans-serif;
     padding: 25px 50px;
     margin-top: 50px;
     text-decoration: none;
@@ -177,6 +173,7 @@ footer {
 
 footer a {   
     color: #2A1E5C;
-    text-decoration: none; 
+    text-decoration: none;
+    font-family:"Short Stack";
 }
 
