--- a/wwd130/eoe/styles/style.css
+++ b/wwd130/eoe/styles/style.css
@@ -4,7 +4,7 @@
 /* general */
 
 body {
-	font-family: 'Short Stack',"Helvetica Neue", Arial, Helvetica, sans-serif;
+	font-family: 'Short Stack';
 	font-size: 2.4vh;
     line-height: 1.5;
 }
@@ -16,6 +16,7 @@ h2 {
     text-transform: uppercase;
     letter-spacing: 0.125em;
     padding-left: 20pt;
+    font-family: 'Yrsa';
     
 }
 
@@ -46,13 +47,14 @@ p {
 	color: white;
 	background: url(https://images.unsplash.com/photo-1576086213369-97a306d36557?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY3Njk5ODk1NQ&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080) center center no-repeat;
 	background-size: cover;
+    font-family: 'Yrsa';
     
 }
 
 .hero-title {
 	max-width: 16em;
 	margin: 0;
-	font-size: 10vh;
+	font-size: 29pt;
 	font-weight: bold;
 	line-height: .9;
 }
@@ -126,11 +128,9 @@ h4 {
     margin-bottom: 3%;
     font-weight: normal;
     
-  
-    
     
 }
-
+/*
 .youtube_video {    
     overflow:hidden;
     padding-bottom:12%;
@@ -140,7 +140,16 @@ h4 {
     margin-top: 4%;
     margin-bottom: 4%;    
 }
+*/
 
+/* Home Page */
+
+.youtube_video {
+    display: flex;
+    justify-content: center;
+    margin-right: 15%;
+    margin-left: 15%;
+}
 
 
 #did_you {
@@ -321,6 +330,7 @@ mark {
     height: 100%;
     width: auto;
     max-width: 100%;
+   
 }
 
 #cow {
@@ -332,6 +342,52 @@ mark {
     text-align: center;
 }
 
+@media screen and (max-width: 900px) {
+    .hero {
+        display: block;
+        height: auto;
+        margin-top: 0;
+}
+
+   .footer, .hero-footer {
+    flex-direction: column;
+} 
+    .button-primary, .button_b, .button_c {
+        display: block;
+        padding: 15px;
+}
+    .hero-title {
+        margin-top: 0;
+}
+    .hero-title {
+        display: none;
+}
+
+    h2 {
+        font-size: 25px;
+        color:#2A1E5C;
+}
+    .youtube_video,.interesting_img , .image_wrapper, .image_wrapper, .image_wrapper:hover, .purple_cow {
+        margin: 40px auto;
+        width: 60%;
+} 
+
+    .all-browsers, .all-browsers_a {
+        width: 80%;
+        display: block;
+        margin: 0 auto;    
+}
+
+    .footer {
+        margin-top: 8%;
+    }
+
+}
+
+
+
+
+/*
 @media only screen and (max-width: 480px) {
     img, .footer, .h_logo, .png, .jpg, .social, .com {
         width: 100%;
