Edited media queries

--- a/wwd130/eoe/styles/style.css
+++ b/wwd130/eoe/styles/style.css
@@ -25,6 +25,7 @@ p {
     text-align: justify;
     padding-left: 50pt;
     padding-right: 50pt;
+    font-family: 'Short Stack';
 }
 
 /* header */
@@ -33,7 +34,11 @@ p {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+    width: 100%;
+    height:auto;
 }
+
+
 	
 /* Hero */
 
@@ -41,32 +46,34 @@ p {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 100vh;
-	padding: 1em;
-    box-sizing: border-box;
-	color: white;
+	height: 40%;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
 	background: url(https://images.unsplash.com/photo-1576086213369-97a306d36557?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY3Njk5ODk1NQ&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080) center center no-repeat;
 	background-size: cover;
     font-family: 'Yrsa';
+    color: white;
     
 }
 
 .hero-title {
-	max-width: 16em;
 	margin: 0;
-	font-size: 29pt;
+    font-size: 72pt;
 	font-weight: bold;
 	line-height: .9;
+    padding: 1%;
+    text-align: center;
 }
 	
 
 .hero-footer {
 	display: flex;
-	margin-bottom: 1em;
+	margin-bottom: .3em;
 }
 
 .button {
-	padding: .5em .67em;
+	padding: .1em .1em;
 	color: white;
 	text-decoration: none;
 	border: .1em solid white;
@@ -127,39 +134,51 @@ h4 {
     margin-top: 5%;
     margin-bottom: 3%;
     font-weight: normal;
-    
-    
 }
-/*
-.youtube_video {    
-    overflow:hidden;
-    padding-bottom:12%;
-    display:block;
-    height:0;
-    text-align: center;
-    margin-top: 4%;
-    margin-bottom: 4%;    
-}
-*/
 
 /* Home Page */
-
-.youtube_video {
-    display: flex;
-    justify-content: center;
-    margin-right: 15%;
-    margin-left: 15%;
+.youtube_a {
+    position: relative;
+    height: 0;
+    padding-top: 56%;
+    margin-bottom: 2%;
+    overflow: hidden;
+    max-width: 100%;
+  }
+.youtube_a iframe { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-
-#did_you {
-    display: flex;
-    margin-block-start: .5em;
-    margin-block-end: .5em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    margin-top: 4%;
+.youtube_b {
+    position: relative;
+    height: 0;
+    padding-top: 56%;
+    margin-bottom: 1%;
+    overflow: hidden;
+    max-width: 100%;
 }
+.youtube_b iframe { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}  
+ 
+#interesting_img {
+    float: left;
+    margin-right: 2%;
+    margin-top: 3%;
+    margin-left: 2%;
+    width: auto;
+    max-width: 100%;
+    
+}
+
 
 /* footer  */
 .footer {
@@ -196,13 +215,14 @@ footer a {
 }
 
 #f_boy_img {
-    margin-top: 2%;
-    margin-bottom: 4%;
     display: block;
-    margin-left: 30%;
-    margin-right: 30%;
-    width: 40%;
-    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    height: 100%;
+    width: auto;
+    max-width: 100%;
+
     
 }
     
@@ -222,6 +242,9 @@ footer a {
     padding-left: 3%;
     padding-right: 3%;
     text-align: center;
+    height: 85%;
+    width: auto;
+    max-width: 100%;
      
 }
 
@@ -230,14 +253,14 @@ footer a {
 }
 
 #treatment_img1 { 
-    margin-top: 3%;
-    margin-bottom: 4%;
+
     display: block;
-    margin-left: 30%;
-    margin-right: 30%;
-    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    height: 100%;
+    width: auto;
     max-width: 100%;
-    height: auto;
     
 }
 
@@ -265,11 +288,12 @@ footer a {
 
 #treatment_img {
     display: block;
-    margin-left: 30%;
-    margin-right: 30%;
-    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    height: 100%;
+    width: auto;
     max-width: 100%;
-    height: auto;
      
 }
 #f_eoe_b {
@@ -280,6 +304,34 @@ footer a {
 
 /* Helpful Info Page*/
 
+.youtube_c {
+    position: relative;
+    height: 0;
+    padding-top: 56%;
+    overflow: hidden;
+    max-width: 100%;
+    margin-top: 2%;
+  }
+.youtube_c iframe { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+ul {
+    list-style-type: disc;
+    list-style-position: inside;
+    padding-left: 16px; /* or margin */
+}
+
+li::before {
+    content: '';
+    margin-left: -8px;
+    margin-bottom: 0;
+}
+
 
 mark {
     -webkit-animation: 1.5s highlight 1.5s 1 normal forwards;
@@ -289,15 +341,16 @@ mark {
     background-position: 100% 0;
   }
   
-  @-webkit-keyframes highlight {
+@-webkit-keyframes highlight {
     to {
       background-position: 0 0;
     }
   }
   
-  @keyframes highlight {
+@keyframes highlight {
     to {
       background-position: 0 0;
+
     }
   }
 
@@ -311,8 +364,7 @@ mark {
 	font-size: 3vh;
     line-height: 1.5;
 }
-
-
+    
 
 .purple_cow {
     display: block;
@@ -327,9 +379,11 @@ mark {
     margin-left: 10%;
     margin-right: 10%;
     padding: 5%;
-    height: 100%;
-    width: auto;
     max-width: 100%;
+    max-height: 100%;
+    
+    
+    
    
 }
 
@@ -342,45 +396,79 @@ mark {
     text-align: center;
 }
 
+
+
 @media screen and (max-width: 900px) {
-    .hero {
-        display: block;
-        height: auto;
-        margin-top: 0;
+
+   
+.hero {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height:max-content;
 }
 
-   .footer, .hero-footer {
-    flex-direction: column;
-} 
-    .button-primary, .button_b, .button_c {
+.youtube_video_a {
+    margin-right: 0%;
+    margin-left: 0%;
+  } 
+
+.footer, .hero-footer {
+        flex-direction: column;
         display: block;
-        padding: 15px;
+        max-width: 100%;
+        max-height: 100%;
+        height:max-content;
+} 
+.button-primary, .button_b, .button_c {
+        display: block;
+        padding: 0.8px;
+        background-color: hotpink;
 }
-    .hero-title {
+.hero-title {
         margin-top: 0;
 }
-    .hero-title {
+.hero-title {
         display: none;
 }
 
-    h2 {
+h2 {
         font-size: 25px;
         color:#2A1E5C;
 }
-    .youtube_video,.interesting_img , .image_wrapper, .image_wrapper, .image_wrapper:hover, .purple_cow {
-        margin: 40px auto;
-        width: 60%;
-} 
 
-    .all-browsers, .all-browsers_a {
+
+.all-browsers, .all-browsers_a {
         width: 80%;
         display: block;
         margin: 0 auto;    
 }
 
-    .footer {
-        margin-top: 8%;
-    }
+.overlay, .overlay_b {
+    display: none;
+}
+
+.over
+
+.img {
+    
+    max-width: 100%;
+    max-height: 100%;
+    width: 500px;
+    object-fit: cover;
+    object-position: bottom;
+
+}
+
+.purple_cow {
+    justify-content: left;
+    max-width: 100%;
+    height: 100%;
+    margin: 0;
+   
+    
+}
+
 
 }
 
