--- a/wwd130/eoe/styles/style.css
+++ b/wwd130/eoe/styles/style.css
@@ -363,6 +363,7 @@ mark {
     font-family: 'Short Stack',"Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-size: 3vh;
     line-height: 1.5;
+    margin: 0;
 }
     
 
@@ -376,12 +377,12 @@ mark {
     line-height: 1.5;
     margin-top: 5%;
     margin-bottom: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     padding: 5%;
+    width: auto;
     max-width: 100%;
-    max-height: 100%;
-    
+  
     
     
    
@@ -389,7 +390,7 @@ mark {
 
 #cow {
     display: block;
-    margin: auto;
+    margin: 0;
 }
 
 .center {
@@ -449,7 +450,6 @@ h2 {
     display: none;
 }
 
-.over
 
 .img {
     
@@ -464,8 +464,8 @@ h2 {
 .purple_cow {
     justify-content: left;
     max-width: 100%;
-    height: 100%;
-    margin: 0;
+    max-height: 100%;
+    margin-inline: .5%;
    
     
 }
