--- a/wwd130/eoe/styles/style.css
+++ b/wwd130/eoe/styles/style.css
@@ -101,7 +101,7 @@ p {
 /* article */
 
 .all-browsers {
-	margin: 0 auto;
+	margin-left: .5%;
 	width: 90%;
     max-width: 100ch;
 }
@@ -113,6 +113,16 @@ p {
     text-align: center;
 }
 
+#all-browsers-c {
+    margin: 0 auto;
+    width: 90%;
+    max-width: 90ch;
+    text-align: center;
+    margin-top: 3%;
+}
+
+
+
 h3 {
     margin: 0 auto;
     padding: 0;
@@ -121,11 +131,8 @@ h3 {
     text-align: center;
     margin-top: 10%;
     margin-bottom: 10%;
-    
- 
-
-  
 }
+
 h4 {
     margin-top: 5%;
 	width: 90%;
@@ -320,6 +327,17 @@ footer a {
     height: 100%;
 }
 
+#stats_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    height: 100%;
+    width: auto;
+    max-width: 100%;
+}
+
 ul {
     list-style-type: disc;
     list-style-position: inside;
@@ -363,6 +381,7 @@ mark {
     font-family: 'Short Stack',"Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-size: 3vh;
     line-height: 1.5;
+    margin-top: 1%;
 }
     
 
